# bioconda-utils

./: .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  Dockerfile.test  MANIFEST.in  MulledDockerfile  README.md  build.sh  docker-entrypoint  generic_build.bash  justfile  pixi.toml  pyproject.toml  setup.cfg  setup.py  versioneer.py
.circleci/: build-docs.sh  config.yml  run.sh  setup.sh
.github/: quay-namespace-info.py
.github-orig/workflows/: GithubActionTests.yml  build-image.yml
.github/workflows/: GithubActionTests.yml  bot.yaml  (+12 more)
bioconda_utils/: __init__.py  _types.py  _version.py  aiopipe.py  artifacts.py  autobump.py  bioconda_utils-conda_build_config.yaml  bioconda_utils-requirements-docs.txt  bioconda_utils-requirements.txt  bioconductor_skeleton.py  blacklist.py  build.py  build_failure.py  bulk.py  circleci.py  cli.py  conda_build_3_compatibility.py  container_manifests.py  cran_skeleton.py  docker_utils.py  easybuild_configs.py  example_config.yaml  githandler.py  githubhandler.py  gitter.py  graph.py  handle_merged_prs.py  hosters.py  involucro  lint_functions.py  linting.py  pkg_test.py  pypi.py  recipe.py  skiplist.py  sphinxext.py  update.py  update_pinnings.py  upload.py  utils.py
docs/: README.md
images/: README.md  build.sh  env_var_inventory.sh  image_config.sh  versions.sh
scripts/: generate-requirements-txt.py
test/: conftest.py  helpers.py  lint_cases.yaml  test-config.yaml  test_artifacts.py  test_bioconductor_skeleton.py  test_container_manifests.py  test_container_platforms.py  test_hosters.py  test_lint.py  test_linting.py  test_pkg_test.py  test_recipe.py  test_utils.py
(+209 files in other folders)
